--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Furnitica - Minimalist Furniture HTML Template</title>
+    <title>Furnitica - Minimalist Furniture</title>
 
     <meta name="keywords" content="Furniture, Decor, Interior">
-    <meta name="description" content="Furnitica - Minimalist Furniture HTML Template">
+    <meta name="description" content="Furnitica - Minimalist Furniture">
     <meta name="author" content="tivatheme">
 
     <!-- Mobile Meta -->
